--- a/style.css
+++ b/style.css
@@ -12,6 +12,23 @@ html {
   font-family: "Public Sans";
 }
 
+main > * {
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  color: var(--blue-950);
+  margin: 0;
+}
+
+p {
+  color: var(--gray-600);
+}
+
 :root {
   /* Primary Colours */
   --blue-950: hsl(233, 26%, 24%);
@@ -41,14 +58,15 @@ header {
 }
 
 .logo {
-    align-items: center;
+  align-items: center;
 }
 
 .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 8rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   width: 100%;
 }
 
@@ -72,7 +90,7 @@ header {
 }
 
 .nav-list a:hover {
-    color: var(--blue-950);
+  color: var(--blue-950);
 }
 
 .request-btn {
@@ -83,4 +101,39 @@ header {
   color: var(--gray-50);
   font-weight: 600;
   cursor: pointer;
+}
+
+.hero {
+  display: flex;
+  grid-template-columns: 40% 60%;
+  position: relative;
+  overflow: hidden;
+  height: 50%;
+}
+
+.hero-info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+  width: 40%;
+  padding-block: 10rem;
+}
+
+.hero-text {
+  line-height: 1.5;
+}
+
+.hero-hook {
+  font-size: 4rem;
+}
+
+.hero-svg {
+  position: absolute;
+  bottom: 0;
+  right: -15vw; /* push out of the right edge */
+  width: clamp(500px, 72vw, 1200px); /* responsive sizing */
+  height: auto; /* keep aspect ratio */
+  z-index: 1;
+  pointer-events: none;
 }
