--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h4 {
 
 p {
   color: var(--gray-600);
+  font-size: var(--body-copy);
   margin: 0;
   line-height: 1.5;
 }
@@ -173,5 +174,45 @@ header {
 }
 
 .posts {
-    
+    background-color: var(--gray-50);
+    padding-block: 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.articles-container {
+    display: flex;
+    gap:2rem;
+}
+
+.article-card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    background-color: #FFF;
+}
+
+.article-card img {
+    height: 200px;
+    min-width: 200px;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    object-fit: fill;
+}
+
+.article-info {
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+  gap: 1rem;
+}
+
+.article-info span {
+  color: var(--gray-600);
+  font-size: 0.8rem;
+}
+
+.article-info h4 {
+  font-size: 1.25rem;
 }
